%%{init: {'theme': 'base', 'themeVariables': {'background': '#ffffff', 'mainBkg': '#ffffff', 'fontSize': '13px', 'fontFamily': 'Arial'}, 'er': {'diagramPadding': 20, 'entityPadding': 10, 'useMaxWidth': true}}}%%
erDiagram
    MANUFACTURER {
        string code PK
        string name
        string knownFor
        string logoUrl
    }

    SHIP {
        string uuid PK
        string env PK
        string name
        string manufacturerCode FK
        string role
        string career
        int crewSize
        float scmSpeed
        float maxSpeed
        float mass
        int shipMatrixId FK
    }

    SHIP_LOADOUT {
        int id PK
        string shipUuid FK
        string env FK
        string portName
        string portType
        int portMinSize
        int portMaxSize
        string componentUuid
        bool portEditable
    }

    SHIP_MODULE {
        int id PK
        string shipUuid FK
        string env FK
        string slotName
        string moduleClassName
        bool isDefault
    }

    SHIP_PAINT {
        int id PK
        string shipUuid FK
        string env FK
        string paintName
        string paintUuid
    }

    COMPONENT {
        string uuid PK
        string env PK
        string name
        string type
        string subType
        int size
        string grade
        string manufacturerCode FK
        float powerDraw
        float powerOutput
        float shieldHp
        float shieldRegen
        float weaponDps
        float alphaDamage
    }

    ITEM {
        string uuid PK
        string env PK
        string name
        string type
        string subType
        int size
        string grade
        string manufacturerCode FK
        float mass
        float hp
    }

    SHIP_MATRIX {
        int id PK
        string name
        string manufacturerCode
        string focus
        string type
        string productionStatus
        float length
        float beam
        int cargocapacity
        int crewMin
        int crewMax
    }

    MANUFACTURER ||--o{ SHIP : "fabrique"
    MANUFACTURER ||--o{ COMPONENT : "produit"
    MANUFACTURER ||--o{ ITEM : "fabrique"
    SHIP ||--o{ SHIP_LOADOUT : "possède"
    SHIP ||--o{ SHIP_MODULE : "a des modules"
    SHIP ||--o{ SHIP_PAINT : "possède des livrées"
    SHIP }o--o| SHIP_MATRIX : "liée à"
